hphp/hack/test/typecheck/nameof/shapes_self_idx.php.exp
ERROR: File "shapes_self_idx.php", line 6, characters 26-33:
Shape field name must not be a `C::class` expression (Parsing[1002])
ERROR: File "shapes_self_idx.php", line 10, characters 36-46:
Using `self::class` in this position will trigger an implicit runtime conversion to string, please use `nameof self` (Typing[4482])
ERROR: File "shapes_self_idx.php", line 12, characters 36-46:
Using `self::class` in this position will trigger an implicit runtime conversion to string, please use `nameof self` (Typing[4482])
